# CandleCG

./: CMakeLists.txt  README.md
ext/assimp/: CMakeLists.txt
ext/soil/: CMakeLists.txt
model/candle/: .directory  candle.mtl
model/floor/: floor.mtl
src/: Camera.h  Mesh.h  Model.h  main.cpp
src/shaders/: light_frag.c  light_vs.c  model_frag.c  model_vs.c
